# DEC-torch

./: .gitignore  README.md  pyproject.toml
examples/: example_mnist.ipynb
src/dec_torch/: autoencoder.py  dec.py  training.py  visualization.py
src/dec_torch/dec/: __init__.py  dec.py  io.py
src/dec_torch/utils/: data.py  visualization.py
