[project]
name = "dec-torch"
version = "0.1.0"
description = "Deep Embedded Clustering in PyTorch"
authors = [
	{ name = "Timur Çakmakoğlu", email = "timurcakmakoglu@gmail.com" }
]
license = { file="LICENSE" }
requires-python = ">=3.10"
dependencies = [
	"torch >= 2.6.0",
	"pandas >= 2.2.0",
	"scikit-learn >= 1.5.0"  # needed for k-means initialization
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["dec_torch*"]